// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages productDateInformation it should render end date errors and start date errors when both errors are passed to the page 1`] = `
<TwoThirdsLayout
  description="Product Date Information page of the Create Fares Data Service"
  title="Product Date Information - Create Fares Data Service"
>
  <CsrfForm
    action="/api/productDateInformation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Start date must be a real date",
            "id": "start-day-input",
          },
          Object {
            "errorMessage": "End date year has an invalid character",
            "id": "end-year-input",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="product-date-hint"
        className="govuk-fieldset"
        role="group"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Enter start date for your product(s), and an end date if applicable
          </h1>
        </legend>
        <div
          className="govuk-hint"
          id="product-date-hint"
        >
          Start dates are mandatory, end dates are optional
        </div>
        <DateSelector
          errors={
            Array [
              Object {
                "errorMessage": "Start date must be a real date",
                "id": "start-day-input",
              },
            ]
          }
          inputs={
            Object {
              "dayInput": "first",
              "monthInput": "august",
              "yearInput": "2020",
            }
          }
          startOrEnd="start"
        />
        <DateSelector
          errors={
            Array [
              Object {
                "errorMessage": "End date year has an invalid character",
                "id": "end-year-input",
              },
            ]
          }
          inputs={
            Object {
              "dayInput": "01",
              "monthInput": "01",
              "yearInput": "20.25",
            }
          }
          startOrEnd="end"
        />
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages productDateInformation it should render end date errors correctly when end date errors are passed to the page 1`] = `
<TwoThirdsLayout
  description="Product Date Information page of the Create Fares Data Service"
  title="Product Date Information - Create Fares Data Service"
>
  <CsrfForm
    action="/api/productDateInformation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "End date year has an invalid character",
            "id": "end-year-input",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="product-date-hint"
        className="govuk-fieldset"
        role="group"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Enter start date for your product(s), and an end date if applicable
          </h1>
        </legend>
        <div
          className="govuk-hint"
          id="product-date-hint"
        >
          Start dates are mandatory, end dates are optional
        </div>
        <DateSelector
          errors={Array []}
          inputs={
            Object {
              "dayInput": "01",
              "monthInput": "01",
              "yearInput": "2020",
            }
          }
          startOrEnd="start"
        />
        <DateSelector
          errors={
            Array [
              Object {
                "errorMessage": "End date year has an invalid character",
                "id": "end-year-input",
              },
            ]
          }
          inputs={
            Object {
              "dayInput": "01",
              "monthInput": "01",
              "yearInput": "20.25",
            }
          }
          startOrEnd="end"
        />
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages productDateInformation it should render start date errors correctly when start date errors are passed to the page 1`] = `
<TwoThirdsLayout
  description="Product Date Information page of the Create Fares Data Service"
  title="Product Date Information - Create Fares Data Service"
>
  <CsrfForm
    action="/api/productDateInformation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Start date must be a real date",
            "id": "start-day-input",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="product-date-hint"
        className="govuk-fieldset"
        role="group"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Enter start date for your product(s), and an end date if applicable
          </h1>
        </legend>
        <div
          className="govuk-hint"
          id="product-date-hint"
        >
          Start dates are mandatory, end dates are optional
        </div>
        <DateSelector
          errors={
            Array [
              Object {
                "errorMessage": "Start date must be a real date",
                "id": "start-day-input",
              },
            ]
          }
          inputs={
            Object {
              "dayInput": "first",
              "monthInput": "august",
              "yearInput": "2020",
            }
          }
          startOrEnd="start"
        />
        <DateSelector
          errors={Array []}
          inputs={
            Object {
              "dayInput": "",
              "monthInput": "",
              "yearInput": "",
            }
          }
          startOrEnd="end"
        />
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages productDateInformation it should render the product date information page upon first landing 1`] = `
<TwoThirdsLayout
  description="Product Date Information page of the Create Fares Data Service"
  title="Product Date Information - Create Fares Data Service"
>
  <CsrfForm
    action="/api/productDateInformation"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="product-date-hint"
        className="govuk-fieldset"
        role="group"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
          >
            Enter start date for your product(s), and an end date if applicable
          </h1>
        </legend>
        <div
          className="govuk-hint"
          id="product-date-hint"
        >
          Start dates are mandatory, end dates are optional
        </div>
        <DateSelector
          errors={Array []}
          inputs={
            Object {
              "dayInput": "",
              "monthInput": "",
              "yearInput": "",
            }
          }
          startOrEnd="start"
        />
        <DateSelector
          errors={Array []}
          inputs={
            Object {
              "dayInput": "",
              "monthInput": "",
              "yearInput": "",
            }
          }
          startOrEnd="end"
        />
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;
